--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -42,9 +42,25 @@
     }
 }
 
+.Latest-updates-setion {
+    top: 99px;
+}
 
 
+.Document-details-page-section .doc-details-right-section .doc-details-box .back-btn-box {
+margin-right: 20px;
+}
 
+.Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section .img-reviews-box {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+.Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section {
+    width: 80px;
+    display: flex;
+    justify-content: center;
+}
 
 
 }
