--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -713,7 +713,9 @@ footer {
                 color: var(--light-gray);
             }
         }
-
+        .icon-b{
+            border: none;
+        }
         .icon-info {
             border: none;
 
