--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,25 @@
 @media (max-width: 991px) {
+  /* ==============   header section start  ============== */
+  header ul {
+    padding: 0;
+  }
+  header ul li .contact-admin {
+    font-size: 12px;
+    margin-right: 8px;
+  }
+  header ul li .user-dropdown {
+    font-size: 12px;
+  }
+  header ul li .user-dropdown .user-icon {
+    width: 15px !important;
+    margin-right: 5px;
+  }
+  header .form-select {
+    font-size: 12px;
+  }
+  /* ================  header section End  ============= */
   .nvabar-setion .navbar-brand {
-    width: 70px;
+    width: 90px;
   }
   .nvabar-setion .nav-title {
     font-size: 17px;
@@ -28,22 +47,26 @@
   .loging-page-section .right-contain .from-section .btn-sing-in {
     padding: 10px 25px;
   }
+  .all-blog-contain .btn-box .Download-btn {
+    width: 116px;
+    padding: 5px 10px;
+    font-size: 14px;
+  }
   .Latest-updates-setion {
     top: 99px;
   }
+  /* ======== Document-details-page-section start =========*/
   .Document-details-page-section .doc-details-right-section .doc-details-box .back-btn-box {
     margin-right: 20px;
   }
   .Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section .img-reviews-box {
-    border-radius: 50%;
     width: 50px;
     height: 50px;
   }
   .Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section {
     width: 80px;
-    display: flex;
-    justify-content: center;
   }
+  /* ======== Document-details-page-section End =========*/
 }
 @media (min-width: 991px) {
   .secondary-menu-section .dropdown-section:hover .dropdown-menu {
@@ -55,6 +78,18 @@
     position: absolute !important;
     display: block !important;
     margin-top: 1px;
+  }
+}
+@media (max-width: 767px) {
+  .nvabar-setion .nav-title {
+    font-size: 15px;
+  }
+  .secondary-menu-section .dropdown-section .dropdown-title {
+    width: 128%;
+    padding: 5px 5px;
+  }
+  .secondary-menu-section .dropdown-section .dropdown-menu {
+    width: 128%;
   }
 }
 @media (max-width: 280px) {
