--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -1,7 +1,32 @@
 @media (max-width:991px){
+    /* ==============   header section start  ============== */
+header {
+    ul {
+        padding: 0;
+        li {
+            .contact-admin {
+                font-size: 12px;
+                margin-right: 8px;
+            }
+
+            .user-dropdown {
+                font-size: 12px;
+                .user-icon {
+                    width: 15px !important;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
+    .form-select{
+        font-size: 12px;
+    }
+}
+
+/* ================  header section End  ============= */
     .nvabar-setion{
         .navbar-brand{
-            width: 70px;
+            width: 90px;
         }
         .nav-title{
             font-size: 17px;
@@ -41,26 +66,28 @@
         }
     }
 }
-
+.all-blog-contain .btn-box .Download-btn {
+    width: 116px;
+    padding: 5px 10px;
+    font-size: 14px;
+}
 .Latest-updates-setion {
     top: 99px;
 }
 
-
+/* ======== Document-details-page-section start =========*/
 .Document-details-page-section .doc-details-right-section .doc-details-box .back-btn-box {
 margin-right: 20px;
 }
 
 .Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section .img-reviews-box {
-    border-radius: 50%;
     width: 50px;
     height: 50px;
 }
 .Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .img-section {
     width: 80px;
-    display: flex;
-    justify-content: center;
 }
+/* ======== Document-details-page-section End =========*/
 
 
 }
@@ -92,7 +119,18 @@ margin-right: 20px;
         }
     }
 }
-
+@media (max-width:767px ){
+    .nvabar-setion .nav-title {
+        font-size: 15px;
+    }
+    .secondary-menu-section .dropdown-section .dropdown-title {
+        width: 128%;
+        padding: 5px 5px;
+    }
+    .secondary-menu-section .dropdown-section .dropdown-menu{
+        width: 128%;
+    }
+}   
 @media (max-width:280px){
     .nvabar-setion{
         .navbar-brand{
