--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -52,7 +52,7 @@
     padding: 5px 10px;
     font-size: 14px;
   }
-  .Latest-updates-setion {
+  .Latest-updates-section {
     top: 99px;
   }
   /* ======== Document-details-page-section start =========*/
