--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -71,7 +71,7 @@ header {
     padding: 5px 10px;
     font-size: 14px;
 }
-.Latest-updates-setion {
+.Latest-updates-section {
     top: 99px;
 }
 
