--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,12 +53,12 @@ select:focus{
     --light-gray:#F3F3F3;
     --orange :#FF6600;
     --siment:#828282;
-
-
+    --secondery-bule-dark:#C8EFFF;
+    --t-color-7a7a7a: #7A7A7A;
+    
 --unnamed-color-ffb032: #FFB032;
 --unnamed-color-e6f0f1: #E6F0F1;
 --unnamed-color-ff0000: #FF0000;
---unnamed-color-7a7a7a: #7A7A7A;
 --unnamed-color-ffffff: #FFFFFF;
 --unnamed-color-545454: #545454;
 }
