--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -88,7 +88,18 @@ margin-right: 20px;
     width: 80px;
 }
 /* ======== Document-details-page-section End =========*/
+    /* ========= Discussion-comments-page-section Start =========== */
 
+.Discussion-comments-page-section .Discussion-comments-box .dic-comment-box .reviews-box .img-section {
+    width: 80px;
+ 
+}
+.Discussion-comments-page-section .Discussion-comments-box .dic-comment-box .reviews-box .img-section .img-reviews-box {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+    /* ========= Discussion-comments-page-section End =========== */
 
 }
 
@@ -130,6 +141,46 @@ margin-right: 20px;
     .secondary-menu-section .dropdown-section .dropdown-menu{
         width: 128%;
     }
+
+    /* ========= Discussion-comments-page-section Start =========== */
+.Discussion-comments-page-section{
+    .Discussion-comments-box{
+        .dic-comment-head-setion{
+            margin:10px 0;
+            padding: 20px 0 ;
+            p{
+                color: var(--white);
+                font-size: 0.9rem;
+            }
+            .back-btn{
+                padding: 5px 15px ;
+            }
+        }
+        .dic-comment-box{
+            .reviews-box {
+                .img-section {
+                    .img-reviews-box {
+                        border-radius: 50%;
+                    }
+                }
+                .reviews-chate-box {
+                    .title-Setion-dic{
+                        display: flex;
+                        justify-content: space-between;
+                        flex-wrap: wrap;
+                        .date-post {
+                            margin-left: 0px;
+                            margin-top: 10px;
+                        }
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+
+/* ========= Discussion-comments-page-section End =========== */
 }   
 @media (max-width:280px){
     .nvabar-setion{
