--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,9 @@ select:focus{
     outline: none !important;
     box-shadow: none !important;
 }
+textarea:focus{
+    outline: none;
+}
 :root{
     --theam-colour:#008DC9;
     --white:#fff;
