--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -204,6 +204,7 @@ header {
 }
 
 /* ================== secondary-menu-section End ================ */
+/* ================== Previous & Next button bottom section start ===========*/
 
 .pre-next-setion {
     margin: 10px 0;
@@ -235,7 +236,7 @@ header {
         text-decoration: underline;
     }
 }
-
+/* ================== Previous & Next button bottom section End ===========*/
 .button {
     border: 1px solid black;
     background-color: transparent;
@@ -276,6 +277,9 @@ header {
         }
     }
 }
+
+
+
 
 /* =================   all pages same aside    latest updates section  End ============= */
 
@@ -434,6 +438,22 @@ header {
             &:hover {
                 color: var(--theam-colour);
             }
+        }
+
+        .edit-setion{
+            display: flex;
+            justify-content: space-evenly;
+            div{
+                border-left: 1px solid black;
+                padding: 10px;
+                i{
+                    font-size: 1.3rem;
+                }
+            }
+        }
+        .temorary-access{
+            color: var(--theam-colour);
+            text-decoration: underline;
         }
     }
 }
@@ -691,7 +711,7 @@ header {
     .Discussion-right-Section{
         .Discussion-table-section{
             // overflow-x: scroll;
-            padding: 20px 0;
+            margin-top: 5px;
             .dic-table{
                 width: 100%;
                 border-spacing: 0px 5px !important;
@@ -751,21 +771,41 @@ header {
 }
 /* ================ Discussion forum page End =================== */
 
-/* ========= Discussion-comments-page-section Start =========== */
+
 /* ========= Discussion-comments-page-section Start =========== */
 .Discussion-comments-page-section{
     .Discussion-comments-box{
         .dic-comment-head-setion{
+            margin:10px 0;
             background-color: var(--light-blue);
             padding: 20px 0 ;
             display: flex;
             justify-content: space-around;
+            align-items: center;
+            p{
+                color: var(--white);
+                font-size: 1.3rem;
+            }
+            .back-btn{
+                padding: 10px 20px ;
+                border-radius: 40px;
+                border: 1px solid var(--white);
+                a{
+                    color: var(--theam-colour);
+                }
+            }
         }
         .dic-comment-box{
+            border: 1px solid var(--gray);
+            border-radius: 10px;
+            margin: 10px 0;
+            .reviews-box-colour{
+                background-color: var(--sky-blue);
+            }
             .reviews-box {
                 display: flex;
-                margin: 20px 0;
-
+                margin: 0px 0;
+                padding: 10px 10px;
                 .img-section {
                     width: 100px;
                     display: flex;
@@ -831,19 +871,54 @@ header {
                 .reviews-chate-box {
                     width: 500px;
                     margin-left: 20px;
-
+                    .title-Setion-dic{
+                        display: flex;
+                        justify-content: space-between;
+                    }
                     .name-title {
                         font-size: 1.3rem;
 
-                        .date-post {
-                            color: var(--siment);
-                            font-size: 1rem;
-                            margin-left: 20px;
-                        }
                     }
-
+                    .date-post {
+                        color: var(--siment);
+                        font-size: 1rem;
+                        margin-left: 20px;
+                    }
+                    
                     .Description-text {
                         padding: 10px 0;
+                    }
+                    .comment-i{
+                        color: var(--theam-colour);
+                        a{
+                        color: var(--theam-colour);
+
+                        }
+                    }
+                    .form-comment{
+                        textarea{
+                            width: 100%;
+                            border: 1px solid var(--gray);
+                            padding: 10px;
+                        }
+                        .post-btn{
+                            margin-top: 10px;
+                            border: 1px solid var(--theam-colour);
+                            background-color: var(--theam-colour);
+                            width: 70px;
+                            height: 45px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            text-align: center;
+                            /* padding: 10px 0px; */
+                            border-radius: 40px;
+                            color: var(--white);
+                            cursor: pointer;
+                            &:hover{
+                                background-color: var(--light-blue);
+                            }
+                        }
                     }
                 }
             }
